# Triglyceride_Localization_via_Edge-Triggered_Segmentation_system_windows

./: .gitignore  README.md  build_exe.py  pyproject.toml  requirements.txt  setup.py
src/: main.py
